# heavyai.jl

./: .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE.md  Manifest.toml  Project.toml  README.md  REQUIRE  appveyor.yml
.github/workflows/: CompatHelper.yml
dev/: index.html  search_index.js
dev/apireference/: index.html
dev/functions/: index.html
dev/search/: index.html
docs/: make.jl
docs/src/: devdocs.md  functions.md  index.md  internal.md
gen-cpp/: MapD.cpp  MapD.h  MapD_server.skeleton.cpp  completion_hints_constants.cpp  completion_hints_constants.h  completion_hints_types.cpp  completion_hints_types.h  mapd_constants.cpp  mapd_constants.h  mapd_types.cpp  mapd_types.h
latest/: apireference.html  functions.html  index.html  internal.html  search.html  search_index.js
lib/: CMakeLists.txt
src/: MapD.jl  OmniSci.jl  client.jl  completion_hints_types.jl  constructors.jl  dataframe_show.jl  dataframes.jl  enums.jl  internal.jl  ipc.jl  mapd_client.jl  mapd_enums.jl  mapd_types.jl  misc.jl  show.jl
src/common/: common.jl  common_types.jl
src/completion_hints/: completion_hints.jl
src/extension_functions/: extension_functions_types.jl
src/mapd/: MapD.jl  mapd.jl  mapd_types.jl
src/serialized_result_set/: serialized_result_set.jl  serialized_result_set_types.jl
src/thrift_code/: client.jl  enums.jl  types.jl
test/: requiresgpu.jl  runtests.jl
test/data/: omnisci_vega.json
v0.1.0/: search_index.js
v0.1.0/apireference/: index.html
v0.1.0/functions/: index.html
v0.1.1/apireference/: index.html
v0.1.1/functions/: index.html
v0.1.2/: search_index.js
v0.2.0/functions/: index.html
v0.2.0/search/: index.html
v0.4.0/: search_index.js
v0.4.0/functions/: index.html
v0.5.0/functions/: index.html
v0.5.1/: search_index.js
v0.5.1/functions/: index.html
v0.5.3/: index.html
v0.5.3/devdocs/: index.html
v0.5.3/functions/: index.html
v0.8.0/: search_index.js
v0.8.1/: search_index.js
(+8 files in other folders)
